# document-sumarry

./: .env  .gitignore  Dockerfile  Makefile  README.md  config-rag.yaml  docker-compose-deploy.yaml  docker-compose.yaml  env.json  main.py  pyproject.toml
client/: index.html
dify-input/: dtm-perlintasan-2023-column_metadata.txt
docs/: Summarisation App.postman_collection.json
entity/: conversation.py  document.py  generic.py  project.py  tools.py  user.py
error/: error.py
handler/: routes.py
infra/: data_store.py  generative_provider.py  instrumentation.py  logging.py  prompt_loader.py  settings.py  storage.py
repository/: chat_bot.py  chatbot.py  chatbot_v2.py  client_db.py  data_store.py  document.py  ollama.py  postgres.py  project.py  storage.py  user.py
sql/: init.sql
static/: enum.py
test/: test_entity.py
usecase/: conversation.py  document.py  project.py  user.py
util/: __init__.py  test_util.py  util.py
