[project]
name = "document-summarisation-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask[async]>=3.1.0",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.30",
    "langchain-ollama>=0.2.2",
    "langchain-postgres>=0.0.12",
    "psycopg2-binary>=2.9.10",
    "pypdf>=5.1.0",
]
